# quant-balance

./: .gitignore  README.md  pyproject.toml  skills-lock.json  test_output.txt  test_output2.txt
.github/workflows/: tests.yml
config/: account.example.toml  config.example.toml
docs/: architecture.md  roadmap.md  test-report-2026-03-27.md  web-demo-acceptance.md  web-design.md
examples/: demo_backtest.csv
src/backend/quant_balance/: logging_utils.py  main.py  paths.py  scheduler.py
src/quant_balance/: __init__.py  __main__.py  backtest.py  backtest_inputs.py  cli.py  corporate_actions.py  csv_loader.py  demo.py  logging_utils.py  main.py  market_rules.py  models.py  report.py  risk.py  scheduler.py  strategy.py  web_demo.py
src/quant_balance/api/: app.py  meta.py  presenters.py  schemas.py
src/quant_balance/core/: __init__.py  attribution.py  backtest.py  corporate_actions.py  data_adapter.py  factors.py  indicators.py  market_rules.py  models.py  portfolio.py  regime.py  report.py  risk.py  screening.py  signals.py  strategies.py  strategy.py
src/quant_balance/data/: __init__.py  common.py  fundamental_loader.py  market_cache.py  market_loader.py  stock_pool.py  tushare_loader.py
src/quant_balance/execution/: __init__.py  signal_export.py
src/web/: index.html
tests/: test_a_share_rules.py  test_api_http_smoke.py  test_api_support.py  test_attribution.py  test_backtest.py  test_backtest_portfolio_mark_to_market.py  test_backtest_service.py  test_cb_loader.py  test_cli_demo.py  test_cli_demo_errors.py  test_cli_help.py  test_config_flow.py  test_corporate_actions.py  test_data_adapter.py  test_demo.py  test_demo_selector_contract.py  test_engine_consistency.py  test_example_data_consistency.py  test_execution_adapters.py  test_factor_service.py  test_factors.py  test_fundamental_loader.py  test_gitignore.py  test_indicators.py  test_main.py  test_market_loader.py  test_models.py  test_module_entrypoint.py  test_notify.py  test_paper_trading.py  test_portfolio.py  test_portfolio_service.py  test_readme_web_demo_docs.py  test_regime.py  test_regime_service.py  test_report.py  test_result_store.py  test_risk_manager.py  test_root_cli.py  test_scheduler.py  (+20 more)
(+106 files in other folders)
