[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-balance"
version = "0.1.0"
description = "QuantBalance: a quantitative trading research, risk control and execution system."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Eric" }
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "tushare>=1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
quant-balance = "quant_balance.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
