[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-balance"
version = "0.1.0"
description = "QuantBalance: a quantitative trading research, risk control and execution system."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Eric" }
]
dependencies = [
  "apscheduler>=3.10",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "tushare>=1.4",
  "pandas>=2.0",
  "Backtesting>=0.3.3",
  "vectorbt>=0.26",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
cn_data = [
  "akshare",
  "baostock",
]

[project.scripts]
quant-balance = "quant_balance.main:main"

[tool.setuptools]
package-dir = {"" = "src/backend"}

[tool.setuptools.packages.find]
where = ["src/backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/backend"]
